# rust-simple-crud

./: Cargo.toml
.sqlx/: query-f95a9c44e50819b6a7a075446a4f88d811666029ae6cfdc9d7185c875b950e94.json
scripts/: init_db.sh
src/: configuration.rs  main.rs
