[package]
name = "rust-simple-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.11"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0"
